# simple_client_server

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
server/: CMakeLists.txt  client.cpp  client.hpp  connection_delegate.hpp  kernel.cpp  kernel.hpp  main.cpp  server.cpp  server.hpp  threadsafefile.cpp  threadsafefile.hpp  utils.hpp
